output/method_names/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestExternalTypeId.java
public Point(@JsonProperty("v") Object v)
private Pojo(@JsonProperty("p") int p)
public void testTypes() throws IOException
public Object getValue()
